tests/functions/valid/forward_decl_args.amu
s32 foo(s32 a);

main() : s32{
    return foo(3);
}

s32 foo(s32 a){
    return a + 1;
}