tests/functions/invalid/too_many_args.amu
s32 foo(s32 a) {
    return a + 1;
}

main() : s32 {
    return foo(1, 2);
}